# simbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: example_tool.yaml
scripts/: deploy.ps1
src/simbot/: __init__.py  config.py  main.py
src/simbot/interfaces/: __init__.py
src/simbot/interfaces/mcp/: __init__.py  __main__.py  converters.py  server.py
src/simbot/interfaces/slack/: __init__.py  bot.py
src/simbot/interfaces/slack/tools/: __init__.py  sql_tool.py
src/simbot/services/: __init__.py  health.py
src/simbot/slack/: __init__.py  client.py
src/simbot/sql_tools/: __init__.py  executor.py  loader.py  models.py
src/simbot/tools/: __init__.py  base.py
src/simbot/utils/: __init__.py  rate_limiter.py
tests/: test_rate_limiter.py  test_sql_tools.py
