[project]
name = "simbot"
version = "0.1.0"
description = "SQL tools bot"
requires-python = ">=3.10"
dependencies = [
    "pyodbc>=5.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.21.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.scripts]
simbot = "simbot.interfaces.slack.bot:main"
simbot-mcp = "simbot.interfaces.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
